package com.mydeveloperplanet.refactor;

public class MessageService {

    public void sendMessage(BaseMessage baseMessage) {
        // Send base message
    }

}
