package com.mydeveloperplanet.refactor;

public class MultiDataDto {

    private DataType dataType;

    public DataType getDataType() {
        return dataType;
    }

    public void setDataType(DataType dataType) {
        this.dataType = dataType;
    }

}
