package com.mydeveloperplanet.refactor;

public class SingleDataMessage extends BaseMessage {
}
